OMNI-5191 Resolved regression issue for editBlock right icon spacing issue

--- a/ui/components/datepickers/base/_index.scss
+++ b/ui/components/datepickers/base/_index.scss
@@ -137,7 +137,8 @@
   color: $color-text-button-default-disabled;
 }
 
-.nds-dropdown-trigger.nds-dropdown-trigger_click {
+.date-picker-parent-div.nds-dropdown-trigger.nds-dropdown-trigger_click,
+.nds-timepicker.nds-dropdown-trigger.nds-dropdown-trigger_click {
   margin-bottom: 0.5rem;
   padding: 0.75rem;
 }
